@@ -1,4 +1,4 @@
-<!-- Automagically generated by the ToDo program on Fri Aug  1 19:13:58 2003 -->
+<!-- Automagically generated by the ToDo program on Fri Aug  1 20:21:37 2003 -->
 <todo version="0.1.17">
     <note priority="medium" time="1059641305">
         Conversations
@@ -11,7 +11,7 @@
         <note priority="veryhigh" time="1059642132">
             Add support for chats
         </note>
-        <note priority="veryhigh" time="1059790413">
+        <note priority="veryhigh" time="1059790413" done="1059794497">
             Add outgoing typing notification
         </note>
         <note priority="high" time="1059641334" done="1059697160">
