@@ -1,3 +1,9 @@
+Fri Aug 01 20:18:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - Outgoing typing notification is now supported.
+
 Fri Aug 01 20:07:30 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
